desktop nav complete, fixed bugs on mobile

--- a/src/styles/_main-navigation.pcss
+++ b/src/styles/_main-navigation.pcss
@@ -18,6 +18,7 @@ header {
       z-index: auto;
       overflow: visible;
       position: relative;
+      background: url("../images/carbon.jpg");
     }
 
     & .close {
@@ -68,6 +69,7 @@ header {
           @media (--md) {
             display: inline-block;
             border: none;
+            color: var(--color-white);
           }
         }
 
@@ -77,6 +79,7 @@ header {
       }
 
       & .parent {
+        
         & a {
           &::before {
             content: "\f054";
@@ -101,25 +104,19 @@ header {
               margin-left: 0.375rem;
             }
           }
-
-          &:hover {
-            &::after {
-              transform: rotate(-180deg);
-              @mixin transition;
-            }
-          }
         }
 
         & .main-menu-submenu {
           position: fixed;
           top: 4.125rem;
           z-index: 1;
-          height: 100%;
           list-style-type: none;
           padding: 0;
           text-transform: none;
           background-color: var(--color-white);
           transform: translateX(-120%);
+          width: 97%;
+          overflow: hidden;
           @mixin transition;
 
           @media (--md) {
@@ -150,6 +147,7 @@ header {
 
               @media (--md) {
                 border: none;
+                color: var(--color-text);
               }
 
               &::before {
@@ -187,6 +185,10 @@ header {
         }
 
         @media (--md) {
+          &:hover > a:after {
+            transform: rotate(180deg);
+            @mixin transition;
+          }
           &:hover > .main-menu-submenu {
             display: block;
           }
@@ -202,6 +204,9 @@ header {
 
   & .navigation-overlay {
     @mixin overlay;
+    @media (--md) {
+      display: none;
+    }
   }
 
   & .overlay-active {
